syntax = "proto3";

package api.v1;

option go_package = "github.com/yourusername/grpc-highperf-backend/api/v1";

import "google/protobuf/timestamp.proto";

service ProductService {
    rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
    rpc GetProduct(GetProductRequest) returns (ProductResponse);
    rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
    rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
    rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int32 stock = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    double price = 3;
    int32 stock = 4;
}

message GetProductRequest {
    string id = 1;
}

message ListProductsRequest {
    int32 page = 1;
    int32 page_size = 2;
    string filter = 3;
}

message UpdateProductRequest {
    string id = 1;
    optional string name = 2;
    optional string description = 3;
    optional double price = 4;
    optional int32 stock = 5;
}

message DeleteProductRequest {
    string id = 1;
}

message ProductResponse {
    Product product = 1;
}

message ListProductsResponse {
    repeated Product products = 1;
    int32 total = 2;
    int32 page = 3;
    int32 page_size = 4;
}

message DeleteProductResponse {
    bool success = 1;
}