syntax = "proto3";

package catalog.v1;

option go_package = "codegen/api/protos/catalog/v1;catalogv1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Brand {
  int32 id = 1;
  string name = 2;
  string slug = 3;
  string logo = 4;
  google.protobuf.Timestamp created_at = 5;
}

message ListBrandsRequest {
}

message ListBrandsResponse {
  int32 total = 1;
  repeated Brand items = 2;
}

message GetBrandRequest {
  int32 id = 1;
}

message GetBrandResponse { 
  Brand brand = 1; 
}

message CreateBrandRequest { 
  string name = 1;
  string logo = 2;
}

message UpdateBrandRequest { 
  int32 id = 1;
  string name = 2;
  string logo = 3;
}

message DeleteBrandRequest {
  int32 id = 1;
}

service BrandService {
  rpc List(ListBrandsRequest) returns (ListBrandsResponse);
  rpc Get(GetBrandRequest) returns (Brand);
  rpc Create(CreateBrandRequest) returns (Brand);  
  rpc Update(UpdateBrandRequest) returns (Brand);
  rpc Delete(DeleteBrandRequest) returns (google.protobuf.Empty);  
}
